@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=EllogonAnnotationTool
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+#APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -13,6 +13,12 @@ DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
+
+MONGO_HOST=localhost
+MONGO_PORT=27017
+MONGO_USERNAME="clarinel"
+MONGO_PASSWORD=""
+MONGO_DATABASE="clarin"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
